tests/derivation/core/match-on-function-simple-neg-somebad/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Sorry, I can't find any elaboration which works. All errors:
Possible error:
    Error during reflection: Unsupported constructor DerivedGen.MkY with given type arguments [0(rc), 1, 2] since it contains an undetermined non-constructor expression `DerivedGen.F.f {rc = {rc:1}} y` as a given

    DerivedGen:1
     18 |   g : X rc -> Fin rc
     19 |   g (MkX x y) = y
     20 |
     21 | data Y : X rc -> X rc -> Type where
     22 |   MkY : Y (MkX (f y) (g x)) x
                  ^^^^^^^^^^^^^^^^^^^^^

Possible error:
    Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

    DerivedGen:2
     21 | data Y : X rc -> X rc -> Type where
     22 |   MkY : Y (MkX (f y) (g x)) x
     23 |
     24 | checkedGen : Fuel -> (rc : Nat) -> (r1, r2 : X rc) -> Gen MaybeEmpty (Y r1 r2)
     25 | checkedGen = deriveGen @{MainCoreDerivator @{LeastEffort}}
                       ^^^^^^^^^

